<resources>

    <string name="waqti">Waqti</string>

    <!--Defaults, these are placeholders-->
    <string name="defaultTask">Default Task</string>
    <string name="defaultTaskName">Default Task Name</string>
    <string name="defaultTime">Default Time</string>
    <string name="defaultDuration">Default Duration</string>
    <string name="defaultPriority">Default Priority</string>
    <string name="defaultLabels">Default Labels</string>
    <string name="defaultOptional">Default Optional</string>
    <string name="defaultDescription">Default Description</string>
    <string name="defaultChecklist">Default Checklist</string>
    <string name="defaultDeadline">Default Deadline</string>
    <string name="defaultTarget">Default Target</string>
    <string name="defaultBefore">Default Before</string>
    <string name="defaultSubTasks">Default SubTasks</string>
    <string name="defaultList">Default List</string>
    <string name="defaultListName">Default List Name</string>
    <string name="defaultBoard">Default Board</string>

    <!--Hints, telling the user what to do-->
    <string name="enterTextHint">Enter Text</string>
    <string name="taskNameHint">Task Name</string>
    <string name="boardNameHint">Board Name</string>
    <string name="listNameHint">List Name</string>
    <string name="allBoards">All Boards</string>
    <string name="constrainedHint">Constrained</string>
    <string name="unconstrainedHint">Unconstrained</string>
    <string name="selectTimeProperty">Select Time Property</string>
    <string name="selectDurationProperty">Select Duration Property</string>
    <string name="selectPriorityProperty">Select Priority Priority</string>
    <string name="selectLabelsProperty">Select Labels Property</string>
    <string name="selectOptionalProperty">Select Optional Property</string>
    <string name="selectDescriptionProperty">Select Description Property</string>
    <string name="selectChecklistProperty">Select Checklist Property</string>
    <string name="selectDeadlineProperty">Select Deadline Property</string>
    <string name="selectTargetProperty">Select Target Property</string>
    <string name="selectBeforeProperty">Select Before Property</string>
    <string name="selectSubTasksProperty">Select SubTasks Property</string>

    <!--Navigation, go to parts of the app-->
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="help">Help</string>

    <!--Modifications-->
    <string name="addTask">Add Task</string>
    <string name="addList">Add List</string>
    <string name="addBoard">Add Board</string>
    <string name="deleteTask">Delete Task</string>
    <string name="deleteList">Delete List</string>
    <string name="deleteBoard">Delete Board</string>
    <string name="changeBoardColor">Change Board Color</string>
    <string name="changeCardColor">Change Card Color</string>
    <string name="changeAppBarColor">Change Bar Color</string>
    <string name="changeBoardImage">Change Board Image</string>
    <string name="clearList">Clear List</string>

    <!--Dialogs-->
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="confirmDialog">Confirm Dialog</string>
    <string name="confirmDialogMessage">Confirm Dialog Message</string>
    <string name="deleteTaskQuestion">Delete Task?</string>
    <string name="deleteListQuestion">Delete List?</string>
    <string name="deleteListDetails">This will delete all the tasks in this list</string>
    <string name="deleteBoardQuestion">Delete Board?</string>
    <string name="deleteBoardDetails">This will delete all the tasks and lists in this
        board</string>
    <string name="pickTimeDialog">Pick Time Dialog</string>
    <string name="pickTextDialog">Pick Text Dialog</string>
    <string name="pickColorDialog">Pick Color Dialog</string>
    <string name="pickPhotoDialog">Pick Photo Dialog</string>

    <string name="boardAppearance">Board Appearance</string>

    <string name="clearListQuestion">Clear List?</string>
    <string name="clearListDetails">This will delete all the tasks in this list but not this
    list itself</string>

    <string name="selectDate">Select Date</string>
    <string name="selectTime">Select Time</string>
    <string name="enterDescription">Enter Description</string>

    <string name="pickBoardColor">Pick Board Color</string>
    <string name="pickBoardBackground">Pick Board Background</string>
    <string name="pickCardColor">Pick Card Color</string>
    <string name="pickAppBarColor">Pick App Bar Color</string>

    <string name="property">Property: </string>
    <string name="constraint">Constraint: </string>

    <string name="timeColon">Time: </string>
    <string name="deadlineColon">Deadline: </string>
    <string name="descriptionColon">Description: </string>
    <string name="selectProperty">Select Property</string>

    <!--About Page-->
    <string name="waqtiDescription">Waqti is a Kanban based time management system with rich
        features that help you understand and control your day to day life.</string>
    <string name="waqtiBetaText">Waqti is currently in beta, updates
        will continue to roll out with exciting and rich features.</string>
    <string name="openSourceLibraries">Open Source Libraries Used</string>
    <string name="waqtiOpenSource">Waqti is free and open source!</string>
    <string name="aboutTheDeveloper">About the Developer</string>


    <!--Settings Page-->
    <string name="appTheme">App Theme:</string>
    <string-array name="appThemes">
        <item>Light</item>
        <item>Dark</item>
        <item>Black</item>
    </string-array>
    <string name="taskListWidth">List Width:</string>
    <string name="listHeaderTextSize">List Header Text Size:</string>
    <string name="taskCardTextSize">Card Text Size:</string>
    <string name="boardScrollSnapMode">Board Scroll Snap Mode:</string>
    <string-array name="boardScrollSnapModeOptions">
        <item>Paged</item>
        <item>Linear</item>
        <item>None</item>
    </string-array>
    <string name="changeNavBarColor">Change Navigation Bar Color?</string>
    <string name="resetToDefaults">Reset to defaults?</string>
    <string name="resetToDefaultsQuestion">Are you sure you want to reset settings to
        defaults?</string>


    <string name="nopeSorryNothing">Nope, sorry nothing…</string>
    <string name="boardIsEmpty">This board is empty 🙁\n\nAdd a list to get started</string>
    <string name="boardListIsEmpty">You have no boards 🙁\n\nAdd a board to get started</string>

    <string name="deletedTask">Deleted Task:</string>
    <string name="deletedList">Deleted List:</string>
    <string name="clearedList">Cleared List:</string>
    <string name="deletedBoard">Deleted Board:</string>


</resources>
