<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/changeBoardColor_menuItem"
        android:title="@string/changeBoardColor" />
    <item
        android:id="@+id/changeCardColor_menuItem"
        android:title="@string/changeCardColor" />
    <item
        android:id="@+id/changeAppBarColor_menuItem"
        android:title="@string/changeAppBarColor" />
    <item
        android:id="@+id/changeBoardPhoto"
        android:title="@string/changeBoardImage" />
    <item
        android:id="@+id/boardAppearance_menuItem"
        android:title="@string/boardAppearance" />

    <item
        android:id="@+id/deleteBoard_menuItem"
        android:icon="@drawable/delete_icon"
        android:title="@string/deleteBoard" />

</menu>