<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <uk.whitecrescent.waqti.frontend.customview.PropertyCard
                android:id="@+id/taskTime_propertyCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:optionsMenu="@menu/menu_property_card"
                app:title="@string/selectTimeProperty" />

            <uk.whitecrescent.waqti.frontend.customview.PropertyCard
                android:id="@+id/taskDeadline_propertyCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:optionsMenu="@menu/menu_property_card"
                app:title="@string/selectDeadlineProperty" />

            <uk.whitecrescent.waqti.frontend.customview.PropertyCard
                android:id="@+id/taskDescription_propertyCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:optionsMenu="@menu/menu_property_card"
                app:title="@string/selectDescriptionProperty" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addTask_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:scaleType="fitXY"
        android:src="@drawable/done_icon"
        app:backgroundTint="@color/secondaryColor"
        app:elevation="14dp"
        app:fabCustomSize="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>